<resources>
    <string name="app_name">MinesweeperPR</string>
    <string name="column_text">가로: 5</string>
    <string name="row_text">세로: 8</string>
    <string name="mine_text">지뢰: 2(5.00%)</string>
    <string name="start_text">시작하기</string>
    <string name="restart_text">다시시작</string>
    <string name="blank"> </string>
    <string name="flag">깃발</string>
    <string name="count_3digit_sample">000</string>
    <string name="mine_text_format">지뢰: %d(%.2f%%)</string>
    <string name="easy_text">쉬움</string>
    <string name="normal_text">보통</string>
    <string name="hard_text">어려움</string>
    <string name="statistics_text">게임통계</string>
    <string name="record">최고기록</string>
    <string name="total_played">전체 게임</string>
    <string name="games_won">승리한 게임</string>
    <string name="winning_rate">승률</string>
    <string name="del_rec_text">기록 삭제</string>
    <string name="fraction">%.2f%%</string>
</resources>