<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCEEDDFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/value_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/language_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#6600CC" />

            <RadioGroup
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/korean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </RadioGroup>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_text"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_text"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_text"
                tools:ignore="TextContrastCheck" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/column_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/column_text"
                android:textColor="#6600CC" />

            <SeekBar
                android:id="@+id/column_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:max="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/row_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/row_text"
                android:textColor="#6600CC" />

            <SeekBar
                android:id="@+id/row_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:max="24" />

        </LinearLayout>

        <TextView
            android:id="@+id/mine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/mine_text"
            android:textColor="#6600CC" />

        <SeekBar
            android:id="@+id/mine_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:max="16" />

        <Button
            android:id="@+id/start_btn"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_text"
            android:textColor="@color/white"
            app:backgroundTint="#6600CC"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/statistics_btn"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/statistics_text"
            android:textColor="@color/white"
            app:backgroundTint="#6600CC"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="67dp" />

    <LinearLayout
        android:id="@+id/for_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/exploded_count"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/count_3digit_sample"
            android:textAlignment="center"
            android:textColor="#9933FF"
            android:textSize="28sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/remained_count"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/count_3digit_sample"
            android:textAlignment="center"
            android:textColor="#6600CC"
            android:textSize="28sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/restart_btn"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/restart_text"
            android:textColor="@color/white"
            app:backgroundTint="#6600CC"
            app:cornerRadius="10dp" />

        <ImageButton
            android:id="@+id/flag_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/flag"
            android:scaleType="fitXY"
            android:src="@drawable/mine"
            android:text="@string/blank" />

        <TextView
            android:id="@+id/time"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/count_3digit_sample"
            android:textAlignment="center"
            android:textColor="#6600CC"
            android:textSize="28sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</FrameLayout>